--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.8.2",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.1.12",
     "zustand": "^5.0.8"
   },
